objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <inlineHelpText>Indicate what information is provided in basic articles. You can create additional fields to further structure article content.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DigitalEngagementResponse__c</fullName>
        <inlineHelpText>Provide a short response for digital engagement channels like Chat, Messaging, Social, and Bots.</inlineHelpText>
        <label>Digital Engagement Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalNotes__c</fullName>
        <inlineHelpText>Provide any internal notes.  Notes are only visible to specific internal user profiles and aren’t shared with external user profiles when the article is shared externally.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Describe the question or issue that this article answers.</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
</CustomObject>